/*
 * Copyright 2023, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.validate;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_multiple_files = true;
option java_outer_classname = "ValidationErrorProto";
option java_package = "io.spine.validate";

import "google/protobuf/any.proto";

import "spine/validate/error_message.proto";
import "spine/base/field_path.proto";

// An error indicating that a message did not pass validation.
message ValidationError {

    // Validation constraint violations found by validator.
    repeated ConstraintViolation constraint_violation = 1;
}

// Describes violation of a validation constraint found in a field of a message.
message ConstraintViolation {

    // An error message format string for this constraint violation.
    //
    // Contains `%s` format specifiers if the violation has one or more parameters.
    //
    string msg_format = 1 [deprecated = true];

    // Parameters referenced by the format specifiers in the message format string.
    repeated string param = 2 [deprecated = true];

    // An error message for this violation.
    spine.validate.TemplateString message = 8;

    // The name of the validated message type.
    string type_name = 7;

    // A path to the field containing an invalid value.
    //
    // If the `(validate)` option is applied and a nested field contains an invalid value,
    // this property holds the path to the invalid field. If there is no nesting, the path
    // consists only of the field name.
    //
    // Example:
    //
    // ```
    // message Student {
    //     Contacts contacts = 1 [(validate) = true];
    // }
    // message Contacts {
    //     Email email = 1 [(validate) = true];
    // }
    // message Email {
    //     string value = 1 [(pattern).regex = "^[\\w.-]+@[\\w.-]+\\.[a-zA-Z]{2,}$"];
    // }
    // ```
    //
    // When the `Student` message is validated and the `value` field in the nested `Email` message
    // is invalid, this property will contain the full path to the invalid field: `contacts.email.value`.
    // However, if the `Email` message is validated independently (not as part of `Student`),
    // the path will consist only of the field name: `value`.
    //
    base.FieldPath field_path = 3;

    // The value of the field which violates the validation constraint.
    //
    // Contains a corresponding wrapper message for primitives
    // (google.protobuf.StringValue for "string" field type and so on).
    //
    google.protobuf.Any field_value = 4;

    // If the field type is message (not scalar type or enum), its fields may violate
    // one or more validation constraints.
    //
    // This field is not populated, if fields of the corresponding message type do not have
    // validation constraints, and simply non-default value was required in the parent message.
    //
    repeated ConstraintViolation violation = 5 [deprecated = true];
}
